syntax = "proto3";

package xchain_proto.v1;

option go_package = "common/xchain/entitlement/gen";

message biguint256   { bytes data = 1; }

message ERC20Operation {
  string chain_id = 1;
  string contract_address = 2;
  biguint256 threshold = 3;
}

message ERC721Operation {
  string chain_id = 1;
  string contract_address = 2;
  biguint256 threshold = 3;
}

message ERC1155Operation {
  string chain_id = 1;
  string contract_address = 2;
  biguint256 threshold = 3;
}

message IsEntitledOperation {
  string chain_id = 1;
  string contract_address = 2;
  biguint256 threshold = 3;
}

message CheckOperation {
  oneof check_clause {
    ERC20Operation erc20_operation = 1;
    ERC721Operation erc721_operation = 2;
    ERC1155Operation erc1155_operation = 3;
    IsEntitledOperation is_entitled_operation = 4;
  }
}

message AndOperation {
    Operation left_operation = 1;
    Operation right_operation = 2;
}

message OrOperation {
    Operation left_operation = 1;
    Operation right_operation = 2;
}

message Operation {
  oneof operation_clause {
    CheckOperation check_operation = 1;
    AndOperation
   and_operation = 2;
    OrOperation
   or_operation = 3;
  }

}

message OperationTree {
  Operation operation = 1;
}